EXTRA_DIST =\
	autogen.sh\
	projects/visualc7/ShaderVG.sln\
	projects/visualc7/ShaderVG.suo\
	projects/visualc7/*.vcproj\
	projects/visualc8/ShaderVG.sln\
	projects/visualc8/ShaderVG.suo\
	projects/visualc8/*.vcproj

if BUILD_EXAMPLES
MAYBE_EXAMPLES = examples
endif

SUBDIRS = src $(MAYBE_EXAMPLES)
