lib_LTLIBRARIES = libOpenVG.la
libOpenVG_la_CFLAGS = -pedantic -I$(top_builddir)/include/vg
libOpenVG_la_SOURCES =\
	shDefs.h\
	shExtensions.h\
	shArrayBase.h\
	shArrays.h\
	shVectors.h\
	shPath.h\
	shImage.h\
	shPaint.h\
	shGeometry.h\
	shContext.h\
	shaders.h\
	shExtensions.c\
	shArrays.c\
	shVectors.c\
	shPath.c\
	shImage.c\
	shPaint.c\
	shGeometry.c\
	shPipeline.c\
	shParams.c\
	shContext.c\
	shaders.c\
	shVgu.c

VG_includedir = $(includedir)/vg
VG_include_HEADERS =\
	$(top_builddir)/include/vg/openvg.h\
	$(top_builddir)/include/vg/vgu.h
